# Tello-LLM-ROS

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
LAN-Server/: ReadMe.md  custom_model_server.py
action/: ExecuteTask.action
config/: common_system_prompt-CN.txt  common_system_prompt-EN.txt  pure_text_system_prompt-CN.txt  pure_text_system_prompt-EN.txt  pure_text_tools_description-CN.txt  pure_text_tools_description-EN.txt  test_cases.json  tools.json
config/prompts/: common_system_prompt-CN.txt  common_system_prompt-EN.txt  pure_text_tools_description-CN.txt  pure_text_tools_description-EN.txt
launch/: control_node.launch  llm_bringup.launch  llm_interface.launch  llm_service.launch  llm_test.launch  offline_llm_test.launch  support_online_model_config  supported_model_config  tello.launch  test_llm.launch
llm_models/: base.py  custom_api_client.py  deepseek_client.py  ernie_client.py  gemini_client.py  gemini_client_for_py39+.py  ollama_client.py  openai_client.py  openai_protocol_client.py
resources/: ReadMe-CN.md  ReadMe-EN.md
rviz/: odom.rviz
scripts/: llm_node.py  llm_service_node.py  llm_test.py  llm_utils.py  mock_tello.py  simple_llm_client.py  task_control_node.py  tello_ros_driver.py  test_llm_offline.py
srv/: LLMQuery.srv  RecordVideo.srv  TakePicture.srv
utils/: llm_utils.py
